XMLExper/m12/m12_442_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In constructor ‘tinyxml2::XMLDeclaration::XMLDeclaration(tinyxml2::XMLDocument*)’:
tinyxml2.cpp:1349:70: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLDocument*’ [-fpermissive]
 1349 | XMLDeclaration::XMLDeclaration( XMLDocument* doc ) : XMLNode( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) )
      |                                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                      |
      |                                                                      tinyxml2::XMLNode*
tinyxml2.cpp:811:32: note:   initializing argument 1 of ‘tinyxml2::XMLNode::XMLNode(tinyxml2::XMLDocument*)’
  811 | XMLNode::XMLNode( XMLDocument* doc ) :
      |                   ~~~~~~~~~~~~~^~~
diff: tinyxml2.S: No such file or directory
